[package]
name = "bit"
version = "0.1.0"
authors = ["cobyeast <cobyeastwood@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"

[dependencies.async-std]
version = "0.99"
features = ["unstable"]