[package]
name = "bit"
version = "0.1.0"
authors = ["cobyeast <cobyeastwood@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3.0"
sanitize-filename = "0.2"
image = "0.23.12"
serde = "1.0.118"
chrono = "0.4.19"
json = "0.12.4"
time = "0.2.23"
futures = "0.3.8"